Fix text overflow in sidebar (#1184)

--- a/assets/less/sidebar.less
+++ b/assets/less/sidebar.less
@@ -227,6 +227,8 @@
       padding: 0;
       line-height: 27px;
       white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
 
       &.open > ul {
         display: block;
